# kMST_AIG

./: .gitignore  README.md  meson.build  puntos.txt
report/: ref.bib  report.tex
src/: #circle.h#  .#circle.h  aig.c  aig.h  circle.c  circle.h  edge.c  edge.h  heuristic.h  input_parser.c  input_parser.h  kmst.c  kmst.h  main.c  point.c  point.h  square.c  square.h  tree.c  tree.h
